# a-la-mode

./: .envrc  LICENCE  README.md  pyproject.toml
a_la_mode/: __init__.py  task.py
tests/: shared.py  test_a_la_mode.py  test_encoding.py  test_serialisation.py
